# toolchemy

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
docs/: explanation.md  how-to-guides.md  reference.md  tutorials.md
prompts_mlflow/: registry.db  tracking.db
resources/tests/ai/: malformed.json
resources/tests/prompts_mlflow/: mlflow.db  registry.db  tracking.db
resources/tests/prompts_mlflow/0/: meta.yaml
resources/tests/prompts_mlflow/models/test_prompt/: meta.yaml
resources/tests/prompts_mlflow/models/test_prompt/version-1/: meta.yaml
resources/tests/prompts_mlflow/models/test_prompt/version-1/tags/: mlflow.prompt.text
resources/tests/prompts_mlflow/models/test_prompt/version-2/: meta.yaml
resources/tests/prompts_mlflow/models/test_prompt/version-2/tags/: mlflow.prompt.text
scripts/: generate_agents_manifest.py
tests/int/: whisper_test.py
tests/perf/utils/: cacher_perf_test.py
tests/unit/ai/: conftest.py  prompter_test.py
tests/unit/ai/clients/: common_test.py  factory_test.py  ollama_client_test.py
tests/unit/ai/prompting/: conftest.py  prompter_mlflow_test.py  prompter_test.py  prompting_common_test.py
tests/unit/ai/trackers/: mlflow_tracker_test.py
tests/unit/db/: lightdb_test.py
tests/unit/nlp/: clean_text_test.py
tests/unit/utils/: at_exit_collector_test.py  cacher_test.py  datestimes_test.py  locations_test.py  logger_test.py  timer_test.py  utils_test.py
tests/unit/vision/: image_test.py
toolchemy/: AGENTS_MANIFEST.md  __main__.py  agent_synergy.py
toolchemy/ai/: prompt_optimizer.py  prompter.py
toolchemy/ai/clients/: __init__.py  common.py  dummy_model_client.py  factory.py  gemini_client.py  ollama_client.py  openai_client.py  pricing.py  whisper_client.py
toolchemy/ai/prompting/: __init__.py  common.py  prompt_optimizer.py  prompter.py  prompter_mlflow.py  simple_llm_prompt_optimizer.py
toolchemy/ai/trackers/: __init__.py  common.py  in_memory_tracker.py  mlflow_tracker.py  neptune_tracker.py
toolchemy/db/: lightdb.py
toolchemy/nlp/: __init__.py  clean_text.py
toolchemy/utils/: __init__.py  at_exit_collector.py  datestimes.py  locations.py  logger.py  timer.py  utils.py
toolchemy/utils/cacher/: __init__.py  cacher_diskcache.py  cacher_pickle.py  cacher_shelve.py  common.py
toolchemy/vision/: __init__.py  caption_overlay.py  image.py
