[tool.poetry]
name = "toolchemy"
version = "0.5.14"
description = "a set of auxiliary programming tools"
authors = ["Cyprian Nosek <cyprian.nosek@protonmail.com>"]
include = [
    { path = "toolchemy/AGENTS_MANIFEST.md", format = ["sdist", "wheel"] },
]

[tool.poetry.dependencies]
python = "~3.12"
ollama = "^0.6.0"
numpy = "2.4.2"
mlflow = "^3.8.1"
neptune-scale = "^0.13.0"
openai = "^2.16.0"
wyoming = "^1.7.1"
tinydb = "^4.8.2"
tenacity = "^9.1.2"
diskcache = "^5.6.3"
colorlog = "^6.10.1"
jsonschema = "^4.23.0"
click = "^8.1.8"
# direct dependency of toolchemy.vision (PIL imports); do not rely on the mlflow->matplotlib chain
pillow = "^12.2.0"
# optional: only needed for GeminiClient (install as `toolchemy[gemini]`)
google-genai = { version = "^1.55.0", optional = true }

[tool.poetry.extras]
gemini = ["google-genai"]

# google-genai installs into the `google.*` namespace package, so deptry cannot map
# `from google import genai` back to it and false-flags it as unused (DEP002)
[tool.deptry.package_module_name_map]
google-genai = "google"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pyfakefs = "^5.9.2"
pytest-benchmark = "^5.1.0"
freezegun = "^1.5.5"
deepdiff = "^8.6.1"

[tool.poetry.scripts]
prompt-studio = "toolchemy.ai.prompting.prompter_mlflow:run_studio"
agent-synergy = "toolchemy.agent_synergy:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
